--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
         extra_hosts:
             # IMPORTANT: Replace with your Docker Host IP (will be appended to /etc/hosts)
             - "dockerhost:10.0.75.1"
-        ports:
-           - "22:22"
+        # ports:
+        #    - "22:22"
         tty: true
 
 ### PHP-FPM Container #######################################
