--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -181,7 +181,7 @@ services:
             - "3001:3001"
             - "3002:3002"
             - "3003:3003"
-            
+
 
 ### Memcached Container #####################################
 
@@ -287,13 +287,13 @@ services:
     volumes_data:
         image: tianon/true
         volumes:
-            - ./data/mysql:/var/lib/mysql
-            - ./data/postgres:/var/lib/postgresql/data
-            - ./data/memcached:/var/lib/memcached
-            - ./data/redis:/data
-            - ./data/neo4j:/var/lib/neo4j/data
-            - ./data/mongo:/data/db
-            - ./data/aerospike:/opt/aerospike/data
-            - ./data/sessions:/sessions
+            - ../../data/mysql:/var/lib/mysql
+            - ../../data/postgres:/var/lib/postgresql/data
+            - ../../data/memcached:/var/lib/memcached
+            - ../../data/redis:/data
+            - ../../data/neo4j:/var/lib/neo4j/data
+            - ../../data/mongo:/data/db
+            - ../../data/aerospike:/opt/aerospike/data
+            - ../../data/sessions:/sessions
 
 ### Add more Containers below ###############################
